[package]
name = "json-elem"
version = "0.1.4"
edition = "2021"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]
license = "MIT"
description = "Manage JSON string as element."
repository = "https://github.com/LorenzoLeonardo/json-elem"
homepage = "https://github.com/LorenzoLeonardo/json-elem"
documentation = "https://docs.rs/json-elem"
readme = "README.md"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
test-case = "3.3"
